--- a/Kursova/EducationProgressForms/quickaccesspanelitem.ui
+++ b/Kursova/EducationProgressForms/quickaccesspanelitem.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DepartmentItemPanel</class>
- <widget class="QWidget" name="DepartmentItemPanel">
+ <class>QuickAccessPanelItem</class>
+ <widget class="QWidget" name="QuickAccessPanelItem">
   <property name="geometry">
    <rect>
     <x>0</x>
