--- a/Kursova/EducationProgressForms/educationprogressmainwindow.ui
+++ b/Kursova/EducationProgressForms/educationprogressmainwindow.ui
@@ -24,7 +24,7 @@
     <item>
      <widget class="QScrollArea" name="scrollArea">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
         <horstretch>1</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -37,8 +37,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>172</width>
-         <height>538</height>
+         <width>221</width>
+         <height>509</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -46,6 +46,12 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16777215</height>
+        </size>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
@@ -70,22 +76,25 @@
             <number>2</number>
            </property>
            <item>
-            <spacer name="horizontalSpacer">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+            <widget class="QLineEdit" name="SearchLine">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
              </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
+             <property name="echoMode">
+              <enum>QLineEdit::Normal</enum>
              </property>
-            </spacer>
+             <property name="cursorMoveStyle">
+              <enum>Qt::LogicalMoveStyle</enum>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QPushButton" name="AddButton">
              <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
@@ -164,7 +173,7 @@
      <x>0</x>
      <y>0</y>
      <width>1074</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
