--- a/Kursova/EducationProgressForms/InputForms/departmentsinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/departmentsinputform.ui
@@ -31,20 +31,31 @@
        </widget>
       </item>
       <item>
-       <widget class="QSpinBox" name="department"/>
+       <widget class="QSpinBox" name="department">
+        <property name="minimum">
+         <number>1</number>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="conteiner" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <widget class="QScrollArea" name="scrollArea">
+     <property name="widgetResizable">
+      <bool>true</bool>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2"/>
+     <widget class="QWidget" name="conteiner">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>376</width>
+        <height>188</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2"/>
+     </widget>
     </widget>
    </item>
    <item>
