--- a/Kursova/EducationProgressForms/InputForms/subjectinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/subjectinputform.ui
@@ -31,7 +31,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QSpinBox" name="subjectCount"/>
+       <widget class="QSpinBox" name="subjectCount">
+        <property name="minimum">
+         <number>1</number>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -46,8 +50,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>380</width>
-        <height>220</height>
+        <width>376</width>
+        <height>188</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2"/>
