--- a/Kursova/EducationProgressForms/quickaccesspanelitem.ui
+++ b/Kursova/EducationProgressForms/quickaccesspanelitem.ui
@@ -107,12 +107,15 @@
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="widget" native="true">
+       <widget class="QPushButton" name="ButtonRemove">
         <property name="maximumSize">
          <size>
           <width>25</width>
           <height>25</height>
          </size>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
