--- a/Kursova/EducationProgressForms/InputForms/departmentsinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/departmentsinputform.ui
@@ -13,7 +13,22 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:0.034, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(53, 8, 89, 255));</string>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>2</number>
+   </property>
+   <property name="topMargin">
+    <number>2</number>
+   </property>
+   <property name="rightMargin">
+    <number>2</number>
+   </property>
+   <property name="bottomMargin">
+    <number>2</number>
+   </property>
    <item>
     <widget class="QWidget" name="horizontalWidget_3" native="true">
      <property name="sizePolicy">
@@ -25,13 +40,19 @@
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="label">
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 255, 255);</string>
+        </property>
         <property name="text">
          <string>Кількість відділень</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QSpinBox" name="department">
+       <widget class="QSpinBox" name="departmentCounter">
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 255, 255);</string>
+        </property>
         <property name="minimum">
          <number>1</number>
         </property>
@@ -42,6 +63,9 @@
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -50,8 +74,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>376</width>
-        <height>188</height>
+        <width>394</width>
+        <height>204</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2"/>
@@ -75,6 +99,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="btn_ok">
+       <property name="styleSheet">
+        <string notr="true">color: rgb(255, 255, 255);</string>
+       </property>
        <property name="text">
         <string>ОК</string>
        </property>
@@ -82,6 +109,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="btn_cancel">
+       <property name="styleSheet">
+        <string notr="true">color: rgb(255, 255, 255);</string>
+       </property>
        <property name="text">
         <string>Відмінна</string>
        </property>
