--- a/Kursova/EducationProgressForms/InputForms/markinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/markinputform.ui
@@ -49,7 +49,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QFontComboBox" name="fontComboBox"/>
+       <widget class="QFontComboBox" name="SpecialiyConboBox">
+        <property name="sizeAdjustPolicy">
+         <enum>QComboBox::AdjustToContents</enum>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLabel" name="label">
