--- a/Kursova/EducationProgressForms/InputForms/markinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/markinputform.ui
@@ -53,6 +53,11 @@
         <property name="sizeAdjustPolicy">
          <enum>QComboBox::AdjustToContents</enum>
         </property>
+        <property name="currentFont">
+         <font>
+          <family>Microsoft JhengHei UI</family>
+         </font>
+        </property>
        </widget>
       </item>
       <item>
