--- a/Kursova/EducationProgressForms/InputForms/studenrinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/studenrinputform.ui
@@ -143,7 +143,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true">
+    <widget class="QWidget" name="widget1" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
        <horstretch>0</horstretch>
