--- a/Kursova/EducationProgressForms/educationprogressmainwindow.ui
+++ b/Kursova/EducationProgressForms/educationprogressmainwindow.ui
@@ -37,8 +37,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>221</width>
-         <height>444</height>
+         <width>216</width>
+         <height>456</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -226,7 +226,11 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_4"/>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QTableView" name="tableView"/>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
@@ -298,7 +302,7 @@
      <x>0</x>
      <y>0</y>
      <width>975</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
