--- a/Kursova/EducationProgressForms/InputForms/markinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/markinputform.ui
@@ -58,7 +58,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox"/>
+          <widget class="QComboBox" name="studentscomboBox"/>
          </item>
         </layout>
        </widget>
